--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,13 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
+a.sh
+b.sh
+c.sh
+d.sh
+e.sh
+db.sh
+config/
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
