--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ d.sh
 e.sh
 db.sh
 config/
+page/script/param.js
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
