--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/WarBuggy/lamthiennguyen#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "check-password-strength": "^2.0.3",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dayjs": "^1.10.7",
